--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/angular_icon.ico" rel="icon" />
+    <link href="assets/img/A_icon.ico" rel="icon" />
     <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
     <!-- Google Fonts -->
