--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="/Altaf/assets/img/A_icon.ico" rel="icon">
+  <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -148,7 +148,7 @@ src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                 <!-- <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase"> -->
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="https://altafbaba.github.io/AltafMansuri/thanks.html">
+                <input type="hidden" name="_next" value="http://127.0.0.1:5501/Altaf/thanks.html">
               </div>
               <div class="my-3">
                 <!-- <div class="loading">Loading</div>
