--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/angular_icon.ico" rel="icon">
+  <link href="assets/img/A_icon.ico" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -143,9 +143,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">65%</i></span>
+              <span class="skill">JavaScript <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -161,9 +161,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">NodeJS <i class="val">55%</i></span>
+              <span class="skill">NodeJS <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -307,20 +307,20 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <!-- <footer id="footer">
+  <footer id="footer">
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>Altaf</span></strong>. All Rights Reserved
-      </div> -->
-      <!-- <div class="credits"> -->
+      </div>
+      <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/ -->
         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div> -->
-    <!-- </div>
-  </footer> -->
+    </div>
+  </footer>
   <!-- End  Footer -->
 
   <div id="preloader"></div>
