--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="/Altaf/assets/img/A_icon.ico" rel="icon">
+<link href="assets/img/A_icon.ico" rel="icon" />
   <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
