--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-<link href="assets/img/A_icon.ico" rel="icon" />
+  <link href="/Altaf/assets/img/A_icon.ico" rel="icon">
   <!-- <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon"> -->
 
   <!-- Google Fonts -->
@@ -71,7 +71,8 @@
           class="github"
           ><i class="bi bi-github"></i
         ></a>
-        <a href="#" class="up-work"><i class="bi bi-upwork"></i></a>
+        <a href="https://www.upwork.com/freelancers/~01c732e937a702b15f?mp_source=share"> <i style="display: flex; height: 20px; width: 20px; padding-top: 4px;"><img src="/Altaf/assets/img/upwork logo.svg" alt="" sizes="1px" srcset=""></i></a>
+      <a href="https://twitter.com/Altaf7258" class="twitter"> <i style="display: flex; height: 20px; width: 20px; padding-top: 4px;"><img src="/Altaf/assets/img/twitter-logo.svg" alt="" sizes="1px" srcset=""></i></a>
       </div>
 
     </div>
