--- a/portfolio.html
+++ b/portfolio.html
@@ -67,11 +67,18 @@
       <div class="header-social-links">
         <a
           href="https://github.com/altafbaba?tab=overview&from=2024-01-01&to=2024-01-29"
-          class="github"
-          ><i class="bi bi-github"></i
+          ><i style="display: flex; height: 25px; width: 25px"
+            ><img src="/assets/img/GitHub-Logo.wine.svg" alt="" /></i
         ></a>
-        <a href="https://www.upwork.com/freelancers/~01c732e937a702b15f?mp_source=share"> <i style="display: flex; height: 20px; width: 20px; padding-top: 4px;"><img src="/Altaf/assets/img/upwork logo.svg" alt="" sizes="1px" srcset=""></i></a>
-      <a href="https://twitter.com/Altaf7258" class="twitter"> <i style="display: flex; height: 20px; width: 20px; padding-top: 4px;"><img src="/Altaf/assets/img/twitter-logo.svg" alt="" sizes="1px" srcset=""></i></a>
+        <a
+          href="https://www.upwork.com/freelancers/~01c732e937a702b15f?mp_source=share"
+          ><i style="display: flex; height: 20px; width: 20px"
+            ><img src="/assets/img/upwork logo.svg" alt="" /></i
+        ></a>
+        <a href="https://twitter.com/Altaf7258"
+          ><i style="display: flex; height: 20px; width: 20px"
+            ><img src="/assets/img/twitter-logo.svg" alt="" /></i
+        ></a>
       </div>
 
 
