--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,7 @@ src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                 <!-- <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase"> -->
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="http://127.0.0.1:5501/Altaf/thanks.html">
+                <input type="hidden" name="_next" value="https://altafbaba.github.io/AltafMansuri/thanks.html">
               </div>
               <div class="my-3">
                 <!-- <div class="loading">Loading</div>
