--- a/thanks.html
+++ b/thanks.html
@@ -9,5 +9,5 @@
   </div> -->
 
   <div >
-    <img style="height: 100%;  width: 100%;" src="/Altaf/assets/img/Thank you.jpg" alt="">
+    <img style="height: 100%;  width: 100%;" src="/assets/img/Thank you.jpg" alt="">
   </div>
