--- a/contact.html
+++ b/contact.html
@@ -68,14 +68,14 @@
       <div class="header-social-links">
         <a
           href="https://github.com/altafbaba?tab=overview&from=2024-01-01&to=2024-01-29"
-          ><i><img src="/assets/img/GitHub-Logo.wine.svg" alt="" /></i
+          ><i><img src="assets/img/GitHub-Logo.wine.svg" alt="" /></i
         ></a>
         <a
           href="https://www.upwork.com/freelancers/~01c732e937a702b15f?mp_source=share"
         >
           <i
             ><img
-              src="/assets/img/upwork logo.svg"
+              src="assets/img/upwork logo.svg"
               alt=""
               sizes="1px"
               srcset="" /></i
@@ -83,7 +83,7 @@
         <a href="https://twitter.com/Altaf7258" class="twitter">
           <i
             ><img
-              src="/assets/img/twitter-logo.svg"
+              src="assets/img/twitter-logo.svg"
               alt=""
               sizes="1px"
               srcset="" /></i
